Added media queries.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
         <div class="banner">
             <h1>website design system<span>.</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, nostrum aperiam! Debitis placeat neque fuga vitae asperiores aliquid ullam culpa!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p class="banner_text">Welcome to the hub for a general website design system.</p>
+            <p class="banner_text">This guide is meant to document the visual vocabulary and reusable components for creating websites, blogs, landing pages, and web applications.</p>
         </div>
 
         <!-- COLOR SECTION -->
@@ -93,7 +93,7 @@
                 <div class="text_style_breakdown">
                     <ul>
                         <li>font-weight: 900</li>
-                        <li>font-size: 96px</li>
+                        <li>font-size: 96px / mobile: 64px</li>
                         <li>font-family: Roboto</li>
                     </ul>
                 </div>
@@ -103,7 +103,7 @@
                 <div class="text_style_breakdown">
                     <ul>
                         <li>font-weight: 600</li>
-                        <li>font-size: 48px</li>
+                        <li>font-size: 48px / mobile: 32px</li>
                         <li>font-family: Cabin</li>
                     </ul>
                 </div>
