--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- FOOTER SECTION -->
 
     <footer>
-        <p>&copy;2021 Jackie Yu. Codecademy project. All rights reserved.</p>
+        <p>&copy;2021 Jackie Yu. Project from Codecademy. All rights reserved.</p>
     </footer>
 </body>
 </html>
