--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <p class="italic">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="font_block cabin">
-                    <a href="https://fonts.google.com/specimen/Cabin?preview.text_type=custom&query=cabin" target="_blank">Cabin</a>
+                    <h3><a href="https://fonts.google.com/specimen/Cabin?preview.text_type=custom&query=cabin" target="_blank">Cabin</a></h3>
                     <p class="regular">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                     <p class="strong">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <p class="italic">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
