--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav class="navigation">
             <ul>
                 <li><a href="#banner">home</a></li>
-                <li><a href="#color">color</a></li>
-                <li><a href="#button">button</a></li>
-                <li><a href="#font">font</a></li>
-                <li><a href="#text_style">text style</a></li>
+                <li><a href="#color">colors</a></li>
+                <li><a href="#button">buttons</a></li>
+                <li><a href="#font">fonts</a></li>
+                <li><a href="#text_style">text styles</a></li>
             </ul>
         </nav>
         <div class="menu-button">
@@ -47,7 +47,7 @@
 
         <div id="color">
             <span class="border_color_top"></span>
-            <h2>color</h2>
+            <h2>colors</h2>
             <div class="color_block imperial_red">
                 <p>imperial red</p>
                 <p>#E63946</p>
@@ -74,7 +74,7 @@
 
         <div id="button">
             <span class="border_color_top"></span>
-            <h2>button</h2>
+            <h2>buttons</h2>
             <div class="button_container">
                 <button class="button button1">button</button>
                 <button class="button button2">hover</button>
@@ -87,7 +87,7 @@
 
         <div id="font">
             <span class="border_color_top"></span>
-            <h2>font</h2>
+            <h2>fonts</h2>
             <div class="font_container">
                 <div class="font_block roboto">
                     <h3><a href="https://fonts.google.com/specimen/Roboto?preview.text_type=custom&query=rob" target="_blank">Roboto</a></h3>
@@ -108,7 +108,7 @@
 
         <div id="text_style">
             <span class="border_color_top"></span>
-            <h2>text style</h2>
+            <h2>text styles</h2>
             <div class="title">
                 <h1>h1: title</h1>
                 <div class="text_style_breakdown">
@@ -133,7 +133,7 @@
                 <h3 class="subheading_text">h3: subheading</h3>
                 <div class="text_style_breakdown">
                     <ul>
-                        <li>font-weight: 400</li>
+                        <li>font-weight: 500</li>
                         <li>font-size: 32px / mobile: 24px</li>
                         <li>font-family: Cabin</li>
                     </ul>
