--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="#banner">home</a></li>
+                <li><a href="#home">home</a></li>
                 <li><a href="#color">colors</a></li>
                 <li><a href="#button">buttons</a></li>
                 <li><a href="#font">fonts</a></li>
-                <li><a href="#text_style">text styles</a></li>
+                <li><a href="#text-style">text styles</a></li>
             </ul>
         </nav>
         <div class="menu-button">
@@ -37,34 +37,34 @@
 
         <!-- BANNER SECTION -->
 
-        <div id="banner">
+        <div id="home" class="banner">
             <h1>website design system<span>.</span></h1>
-            <p class="banner_text">Welcome to the hub for a general website design system.</p>
+            <p class="banner-text">Welcome to the hub for a general website design system.</p>
             <p>This guide is meant to document the visual vocabulary and reusable components for creating websites, blogs, landing pages, and web applications.</p>
         </div>
 
         <!-- COLOR SECTION -->
 
-        <div id="color">
-            <span class="border_color_top"></span>
+        <div id="color" class="color">
+            <span class="border-color-top"></span>
             <h2>colors</h2>
-            <div class="color_block imperial_red">
+            <div class="color-block imperial-red">
                 <p>imperial red</p>
                 <p>#E63946</p>
             </div>
-            <div class="color_block honeydew">
+            <div class="color-block honeydew">
                 <p>honeydew</p>
                 <p>#F1FAEE</p>
             </div>
-            <div class="color_block powder_blue">
+            <div class="color-block powder-blue">
                 <p>powder blue</p>
                 <p>#A8DADC</p>
             </div>
-            <div class="color_block celadon_blue">
+            <div class="color-block celadon-blue">
                 <p>celadon blue</p>
                 <p>#457B9D</p>
             </div>
-            <div class="color_block prussian_blue">
+            <div class="color-block prussian-blue">
                 <p>prussian blue</p>
                 <p>#1D3557</p>
             </div>
@@ -72,30 +72,30 @@
 
         <!-- BUTTON SECTION -->
 
-        <div id="button">
-            <span class="border_color_top"></span>
+        <div id="button" class="button">
+            <span class="border-color-top"></span>
             <h2>buttons</h2>
-            <div class="button_container">
-                <button class="button button1">button</button>
-                <button class="button button2">hover</button>
-                <button class="button button3">active</button>
-                <button class="button button4">disabled</button>
+            <div class="button-container">
+                <button class="button-style button1">button</button>
+                <button class="button-style button2">hover</button>
+                <button class="button-style button3">active</button>
+                <button class="button-style button4">disabled</button>
             </div>
         </div>
 
         <!-- FONT SECTION -->
 
-        <div id="font">
-            <span class="border_color_top"></span>
+        <div id="font" class="font">
+            <span class="border-color-top"></span>
             <h2>fonts</h2>
-            <div class="font_container">
-                <div class="font_block roboto">
+            <div class="font-container">
+                <div class="font-block roboto">
                     <h3><a href="https://fonts.google.com/specimen/Roboto?preview.text_type=custom&query=rob" target="_blank">Roboto</a></h3>
                     <p class="regular">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                     <p class="strong">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <p class="italic">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
-                <div class="font_block cabin">
+                <div class="font-block cabin">
                     <h3><a href="https://fonts.google.com/specimen/Cabin?preview.text_type=custom&query=cabin" target="_blank">Cabin</a></h3>
                     <p class="regular">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                     <p class="strong">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -106,12 +106,12 @@
 
         <!-- TEXT STYLES SECTION -->
 
-        <div id="text_style">
-            <span class="border_color_top"></span>
+        <div id="text-style" class="text-style">
+            <span class="border-color-top"></span>
             <h2>text styles</h2>
             <div class="title">
                 <h1>h1: title</h1>
-                <div class="text_style_breakdown">
+                <div class="text-style-breakdown">
                     <ul>
                         <li>font-weight: 900</li>
                         <li>font-size: 96px / mobile: 64px</li>
@@ -120,8 +120,8 @@
                 </div>
             </div>
             <div class="heading">
-                <h2 class="heading_text">h2: heading</h2>
-                <div class="text_style_breakdown">
+                <h2 class="heading-text">h2: heading</h2>
+                <div class="text-style-breakdown">
                     <ul>
                         <li>font-weight: 600</li>
                         <li>font-size: 48px / mobile: 32px</li>
@@ -130,8 +130,8 @@
                 </div>
             </div>
             <div class="subheading">
-                <h3 class="subheading_text">h3: subheading</h3>
-                <div class="text_style_breakdown">
+                <h3 class="subheading-text">h3: subheading</h3>
+                <div class="text-style-breakdown">
                     <ul>
                         <li>font-weight: 500</li>
                         <li>font-size: 32px / mobile: 24px</li>
@@ -141,7 +141,7 @@
             </div>
             <div class="paragraph">
                 <p>p: paragraph</p>
-                <div class="text_style_breakdown">
+                <div class="text-style-breakdown">
                     <ul>
                         <li>font-weight: 400</li>
                         <li>font-size: 16px</li>
