Updated list style and footer.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="#home">home</a></li>
-                <li><a href="#color">colors</a></li>
-                <li><a href="#button">buttons</a></li>
-                <li><a href="#font">fonts</a></li>
-                <li><a href="#text-style">text styles</a></li>
+                <li>
+                    <a href="#home">home</a>
+                </li>
+                <li>
+                    <a href="#color">colors</a>
+                </li>
+                <li>
+                    <a href="#button">buttons</a>
+                </li>
+                <li>
+                    <a href="#font">fonts</a>
+                </li>
+                <li>
+                    <a href="#text-style">text styles</a>
+                </li>
             </ul>
         </nav>
         <div class="menu-button">
