--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <!-- HEADER SECTION -->
+    <!-- HEADER -->
 
     <header>
         <nav class="navigation">
@@ -41,11 +41,11 @@
         </div>
     </header>
         
-    <!-- MAIN SECTION -->
+    <!-- MAIN -->
 
     <main>
 
-        <!-- BANNER SECTION -->
+        <!-- BANNER -->
 
         <div id="home" class="banner">
             <h1>website design system<span>.</span></h1>
@@ -53,7 +53,7 @@
             <p>This guide is meant to document the visual vocabulary and reusable components for creating websites, blogs, landing pages, and web applications.</p>
         </div>
 
-        <!-- COLOR SECTION -->
+        <!-- COLOR -->
 
         <div id="color" class="color">
             <span class="border-color-top"></span>
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-        <!-- BUTTON SECTION -->
+        <!-- BUTTON -->
 
         <div id="button" class="button">
             <span class="border-color-top"></span>
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <!-- FONT SECTION -->
+        <!-- FONT STYLE -->
 
         <div id="font" class="font">
             <span class="border-color-top"></span>
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <!-- TEXT STYLES SECTION -->
+        <!-- TEXT STYLE -->
 
         <div id="text-style" class="text-style">
             <span class="border-color-top"></span>
@@ -163,7 +163,7 @@
 
     </main>
 
-    <!-- FOOTER SECTION -->
+    <!-- FOOTER -->
 
     <footer>
         <p>&copy;2021 Jackie Yu. Project from Codecademy. Icons from Font Awesome. All rights reserved.</p>
