--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- FOOTER -->
 
     <footer>
-        <p>&copy;2021 Jackie Yu. Project from Codecademy. Icons from <a href="https://fontawesome.com/" target="_blank">Font Awesome</a>. All rights reserved.</p>
+        <p>&copy;2021 Jackie Yu. Project from <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>. Icons from <a href="https://fontawesome.com/" target="_blank">Font Awesome</a>. All rights reserved.</p>
     </footer>
 
     <script src="./resources/js/script.js"></script>
