--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#color">colors</a>
                 </li>
                 <li>
-                    <a href="#button" aria-label="click here to move to section">buttons</a>
+                    <a href="#button">buttons</a>
                 </li>
                 <li>
                     <a href="#font">fonts</a>
